create main page & elect page

--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,15 @@ html{
 #root{
   height:100%;
 }
+h1{
+    color:#6C757D;
+    font-weight: bold;
+}
+h2{
+color:#6C757D;
+font-weight: bold;
+}
+h3{
+
+    color:#6C757D;
+}
