--- a/src/css/AuthPage.css
+++ b/src/css/AuthPage.css
@@ -1,4 +1,4 @@
-.reg-page{
+.auth-page{
     display: flex;
     justify-content: center;
     height:100%;
@@ -8,11 +8,13 @@
     background-size: cover;
     text-align: center;
 }
-.reg-form{
+.auth-form{
     height: fit-content;
-    margin-top: 10rem;
     border: 2px solid #6EA8FE;
     background-color: #E7F1FF;
     border-radius: 1rem;
     padding: 2vw;
+}
+.auth-container{
+    margin-top: 10rem;
 }
